# dwallet-network

./: .clippy.toml  .dockerignore  .eslintrc.js  .gitattributes  .gitignore  .lycheeignore  2PC-MPC-CODE.md  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  Cargo.lock.copy  Cargo.toml  Makefile  README.md  README_YUVAL.md  RELEASES.md  SECURITY.md  bas64_private_output_1.txt  bas64_private_output_2.txt  bas64_private_output_3.txt  bas64_private_output_4.txt  bas64_public_output_1.txt  bas64_public_output_2.txt  bas64_public_output_3.txt  binary-build-list.json  bls-0x65152c88f31ae37ceda117b57ee755fc0a5b035a2ecfde61d6c982ffea818d09.key  bls-0x78e0878dab39e45c2dff7633b745b5c338dc58f6c99d398970fdda5ae7be34aa.key  change_token_name.sh  class-groups-mock-key  class-groups.seed  clippy.toml  consensus.key  crates.js  current_pricing.yaml  dWallet-MPC.md  data_i_need.txt  deny.toml  dwallet_id.txt  dwallet_network_decryption_key_id.txt  graphql.config.ts  help.html  (+29 more)
crates/class-groups-constants/: Cargo.toml
crates/class-groups-constants/src/: constants.rs  lib.rs  main.rs  message_digest.rs
crates/class-groups-constants/tests/: build_network_dkg_on_chain_output_test.rs
crates/dwallet-classgroups-types/: Cargo.toml
crates/dwallet-classgroups-types/src/: lib.rs  main.rs  mock_class_groups.rs
crates/dwallet-mpc/: Cargo.toml
crates/dwallet-mpc-centralized-party/: Cargo.toml
crates/dwallet-mpc-centralized-party/src/: lib.rs  main.rs
crates/dwallet-mpc-types/: Cargo.toml
crates/dwallet-mpc-types/src/: class_groups_key.rs  dwallet_mpc.rs  lib.rs
crates/dwallet-mpc/src/: lib.rs  main.rs
crates/dwallet-rng/: Cargo.toml
crates/dwallet-rng/src/: lib.rs
crates/eth-light-client/: Cargo.toml
crates/eth-light-client/src/: config.rs  eth_state.rs  lib.rs  light_client.rs  proof.rs  update.rs  utils.rs
crates/ika-adapter-transactional-tests/: Cargo.toml
crates/ika-adapter-transactional-tests/tests/: tests.rs
crates/ika-analytics-indexer/: Cargo.toml
crates/ika-analytics-indexer/src/: analytics_processor.rs  lib.rs  main.rs  package_store.rs  tables.rs
crates/ika-archival/: Cargo.toml
crates/ika-archival/src/: lib.rs  reader.rs  tests.rs  writer.rs
crates/ika-aws-orchestrator/: Cargo.toml  README.md
crates/ika-aws-orchestrator/assets/: grafana-dashboard-narwhal-only.json  grafana-dashboard-narwhal.json  plot.py
crates/ika-aws-orchestrator/src/: main.rs
crates/ika-benchmark/: Cargo.toml
crates/ika-benchmark/src/: bank.rs  benchmark_setup.rs  embedded_reconfig_observer.rs  fullnode_reconfig_observer.rs  in_memory_wallet.rs  lib.rs  options.rs  system_state_observer.rs  util.rs
crates/ika-benchmark/tests/: simtest.rs
crates/ika-bridge-cli/: Cargo.toml
crates/ika-bridge-cli/src/: lib.rs  main.rs
crates/ika-bridge-indexer/: Cargo.toml  README.md  config.yaml
crates/ika-bridge-indexer/src/: config.rs  eth_bridge_indexer.rs  ika_bridge_indexer.rs  ika_transaction_handler.rs  ika_transaction_queries.rs  lib.rs  main.rs  metrics.rs  models.rs  postgres_manager.rs  schema.rs  storage.rs  types.rs
crates/ika-bridge-indexer/tests/: indexer_tests.rs
crates/ika-cluster-test/: Cargo.toml
crates/ika-cluster-test/src/: cluster.rs  config.rs  faucet.rs  helper.rs  lib.rs  main.rs  test_case.rs  wallet_client.rs
crates/ika-cluster-test/tests/: local_cluster_test.rs
crates/ika-config/: Cargo.toml
crates/ika-config/data/: fullnode-template-with-path.yaml  fullnode-template.yaml
crates/ika-config/src/: certificate_deny_config.rs  genesis.rs  initiation.rs  lib.rs  local_ip_utils.rs  node.rs  node_config_metrics.rs  p2p.rs  test_gateway.yml  transaction_deny_config.rs  validator_info.rs
crates/ika-core/: Cargo.toml
crates/ika-core/benches/: batch_verification_bench.rs  verified_cert_cache_bench.rs
crates/ika-core/crypto/: GRANT.txt
crates/ika-core/src/: authority.rs  authority_aggregator.rs  authority_client.rs  authority_server.rs  consensus_adapter.rs  consensus_handler.rs  consensus_throughput_calculator.rs  consensus_validator.rs  db_checkpoint_handler.rs  execution_cache.rs  execution_driver.rs  generate_format.rs  jsonrpc_index.rs  lib.rs  main.rs  metrics.rs  mock_consensus.rs  mysticeti_adapter.rs  overload_monitor.rs  par_index_live_object_set.rs  post_consensus_tx_reorder.rs  rest_index.rs  runtime.rs  safe_client.rs  scoring_decision.rs  signature_verifier.rs  stake_aggregator.rs  state_accumulator.rs  storage.rs  streamer.rs  subscription_handler.rs  test_authority_clients.rs  test_utils.rs  transaction_input_loader.rs  transaction_manager.rs  transaction_orchestrator.rs  transaction_outputs.rs  validator_tx_finalizer.rs  verify_indexes.rs
crates/ika-core/tests/: README.md  format.rs
crates/ika-cost/: Cargo.toml  troubleshooting.md
crates/ika-cost/tests/: empirical_transaction_cost.rs
crates/ika-deepbook-indexer/: Cargo.toml
crates/ika-deepbook-indexer/src/: config.rs  events.rs  ika_deepbook_indexer.rs  lib.rs  main.rs  metrics.rs  models.rs  postgres_manager.rs  schema.rs  server.rs  types.rs
crates/ika-e2e-tests/: Cargo.toml
crates/ika-e2e-tests/tests/: checkpoint_tests.rs  dynamic_committee_tests.rs  full_node_tests.rs  multisig_tests.rs  object_deletion_tests.rs  onsite_reconfig_observer_tests.rs  overload_monitor_tests.rs  passkey_e2e_tests.rs  randomness_tests.rs  (+13 more)
crates/ika-faucet/: Cargo.toml
crates/ika-framework/: CONTRIBUTING.md  Cargo.toml  README.md  published_api.txt
crates/ika-framework-snapshot/: Cargo.toml
crates/ika-framework-tests/: Cargo.toml
crates/ika-genesis-builder/: Cargo.toml
crates/ika-graphql-e2e-tests/: Cargo.toml  README.md
crates/ika-graphql-rpc/: Cargo.toml  README.md  schema.graphql  staging.graphql
ika-execution/: Cargo.toml  README.md
ika-execution/cut/: Cargo.toml  README.md
ika-execution/src/: executor.rs  latest.rs  lib.rs  lib.template.rs  tests.rs  v0.rs  v1.rs  v2.rs  verifier.rs
pera-execution/: Cargo.toml  README.md
pera-execution/cut/: Cargo.toml  README.md
pera-execution/src/: executor.rs  latest.rs  lib.rs  lib.template.rs  tests.rs  v0.rs  v1.rs  v2.rs  verifier.rs
(+18090 files in other folders)
